# org-todo-send

./: .envrc  .gitignore  README.org  flake.nix  pyproject.toml  recipients_example.toml  usage.md
org_todo_send/: main.py  parse.py
tests/: recipients_test.toml  test.org  test_get_todos_for_recipient.csv  test_parse.py
