[tool.poetry]
name = "org-todo-send"
version = "0.1.0"
description = ""
authors = ["Ammar Nanjiani <ammar.nanjiani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
orgparse = "^0.4.20231004"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
